--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
+
+
+
 {
   "name": "nodejs",
   "version": "1.0.0",
@@ -6,13 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apn": "^2.2.0",
-    "express": "^4.19.2"
+    "@types/node": "^20",
+    "agora-access-token": "^2.0.4",
+    "express": "^4.19.2",
+    "apn": "^2.2.0"
 
-    
   }
 }
-
