--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
-
-
-
 {
-  "name": "nodejs",
+  "name": "netlify-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "express": "^4.16.4",
+    "netlify-lambda": "^1.4.3",
+    "apn": "^2.2.0",
+    "serverless-http": "^1.9.1"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
+    "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/owenconti/netlify-express.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^20",
-    "agora-access-token": "^2.0.4",
-    "express": "^4.19.2",
-    "apn": "^2.2.0"
-
-  }
+  "bugs": {
+    "url": "https://github.com/owenconti/netlify-express/issues"
+  },
+  "homepage": "https://github.com/owenconti/netlify-express#readme"
 }
