--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "apn": "^2.2.0",
     "express": "^4.16.4",
     "netlify-lambda": "^1.4.3",
-    "apn": "^2.2.0",
-    "serverless-http": "^1.9.1"
+    "serverless-http": "^1.9.1",
+    "sqlite3": "^5.1.7"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
     "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
