--- a/.env.development.local
+++ b/.env.development.local
@@ -1,2 +1,6 @@
 # Created by Vercel CLI
 
+KV_URL="redis://default:AZSLAAIjcDE2N2QyZTM5MWU0MWU0NDIzOTVhYzQwYTk2ZWY1OGZkY3AxMA@immune-raccoon-38027.upstash.io:6379"
+KV_REST_API_URL="https://immune-raccoon-38027.upstash.io"
+KV_REST_API_TOKEN="AZSLAAIjcDE2N2QyZTM5MWU0MWU0NDIzOTVhYzQwYTk2ZWY1OGZkY3AxMA"
+KV_REST_API_READ_ONLY_TOKEN="ApSLAAIgcDFpKJyipC9FQBeioZ8kOwdT1-o323yhrK0jC5cNoH0wow"
